Adding Check If Online Feature