@@ -13,6 +13,7 @@ buildscript {
 ext {
     springBootVersion = '1.5.10.RELEASE'
     springfoxSwagger = '2.8.0'
+    apacheIgnite = '2.4.0'
 }
 
 subprojects {
@@ -31,8 +32,8 @@ subprojects {
     }
 
     configurations {
-        sourceCompatibility = 1.9
-        targetCompatibility = 1.9
+        sourceCompatibility = 1.10
+        targetCompatibility = 1.10
 
         compileJava.options.encoding = 'UTF-8'
         compileTestJava.options.encoding = 'UTF-8'
@@ -62,9 +63,35 @@ subprojects {
 
 }
 
+
 project(":interface"){
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
+
+
+    bootRun {
+        doFirst { //Added due to the java9 modules needs (It is necessary because ApacheIgnite)
+            jvmArgs= [
+                     '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'
+                    , '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+                    , '--add-exports', 'java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED'
+                    , '--add-exports', 'jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED'
+                    , '--add-modules', 'java.xml.bind'
+            ]
+        }
+    }
+
+    acceptanceTest {
+            doFirst { //Added due to the java9 modules needs (It is necessary because ApacheIgnite)
+                jvmArgs= [
+                        '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'
+                        , '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
+                        , '--add-exports', 'java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED'
+                        , '--add-exports', 'jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED'
+                        , '--add-modules', 'java.xml.bind'
+                ]
+            }
+    }
 
     dependencies {
         compile group:'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
@@ -73,10 +100,14 @@ project(":interface"){
         compile group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.1.0'
         compile project(":model")
 
+        compile group: 'org.apache.ignite', name: 'ignite-core', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-spring', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-spring-data', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-indexing', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-slf4j', version: apacheIgnite
+
         testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
         testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
-
-
     }
 }
 
@@ -93,6 +124,11 @@ project(":infrastructure"){
 
     dependencies {
         compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion
-    }
+        compile group: 'org.apache.ignite', name: 'ignite-core', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-spring', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-spring-data', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-indexing', version: apacheIgnite
+        compile group: 'org.apache.ignite', name: 'ignite-slf4j', version: apacheIgnite
 
+    }
 }
